# ChangeLog for sys-fs/e2fsprogs
# Copyright 1999-2009 Gentoo Foundation; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo-x86/sys-fs/e2fsprogs/ChangeLog,v 1.175 2009/01/04 17:08:36 vapier Exp $

*e2fsprogs-1.41.3-r1 (04 Jan 2009)

  04 Jan 2009; Mike Frysinger <vapier@gentoo.org>
  +files/e2fsprogs-1.41.3-tune2fs-opt.patch, +e2fsprogs-1.41.3-r1.ebuild:
  Add fix from upstream for slow tune2fs usage #253162 by candrews.

  01 Jan 2009; Guy Martin <gmsoft@gentoo.org> e2fsprogs-1.41.3.ebuild:
  hppa stable, #251808

  30 Dec 2008; Mike Frysinger <vapier@gentoo.org> e2fsprogs-1.41.3.ebuild:
  Create temp /etc/mtab for random test failures #217719.

  29 Dec 2008; Tobias Scherbaum <dertobi123@gentoo.org>
  e2fsprogs-1.41.3.ebuild:
  ppc stable, bug #251808

  29 Dec 2008; Brent Baude <ranger@gentoo.org> e2fsprogs-1.41.3.ebuild:
  Marking e2fsprogs-1.41.3 ppc64 for bug 251808

  29 Dec 2008; Friedrich Oslage <bluebird@gentoo.org>
  e2fsprogs-1.41.3.ebuild:
  Stable on sparc, bug #251808

  27 Dec 2008; Jeremy Olexa <darkside@gentoo.org> e2fsprogs-1.41.3.ebuild:
  amd64 stable, bug 251808

  26 Dec 2008; Raúl Porcel <armin76@gentoo.org> e2fsprogs-1.41.3.ebuild:
  ia64/x86 stable wrt #251808

  26 Dec 2008; Tobias Klausmann <klausman@gentoo.org>
  e2fsprogs-1.41.3.ebuild:
  Stable on alpha, bug #251808

  08 Nov 2008; Raúl Porcel <armin76@gentoo.org> e2fsprogs-1.41.2.ebuild:
  alpha/ia64 stable wrt #244511

  08 Nov 2008; nixnut <nixnut@gentoo.org> e2fsprogs-1.41.2.ebuild:
  Stable on ppc wrt bug 244511

  28 Oct 2008; Brent Baude <ranger@gentoo.org> e2fsprogs-1.41.2.ebuild:
  Marking e2fsprogs-1.41.2 ppc64 for bug 242740

  27 Oct 2008; Markus Meier <maekke@gentoo.org> e2fsprogs-1.41.2.ebuild:
  amd64/x86 stable, bug #244511

  27 Oct 2008; Jeroen Roovers <jer@gentoo.org> e2fsprogs-1.41.2.ebuild:
  Stable for HPPA (bug #244511).

*e2fsprogs-1.41.3 (18 Oct 2008)

  18 Oct 2008; Mike Frysinger <vapier@gentoo.org> +e2fsprogs-1.41.3.ebuild:
  Version bump.
