@@ -20,6 +20,7 @@ DIST e2fsprogs-1.41.0.tar.gz 4260246 RMD160 12cfc7168539036e51853ec51a74f11b92a6
 DIST e2fsprogs-1.41.1.tar.gz 4352631 RMD160 0b5b1af0f2c9ff7ead7fa2b1caf1c6e41ee326fa SHA1 f55b95df6956cd5a9f85f7deb90968d24d79a4ab SHA256 4b0fb1fdceea52dabdb7f9aadd34febe5a4bb229d2ac8ff97229d0d349c118e4
 DIST e2fsprogs-1.41.2.tar.gz 4365064 RMD160 debe0ee72e2e68fb773887fb60ef509ad7bf6d76 SHA1 8334f9eaea5f0001e3241ea71ea094f2d87298a9 SHA256 635d6d07e5a4d615e599c051166af965baa754f9ff7435e746de1a5d2a5c0d56
 DIST e2fsprogs-1.41.3.tar.gz 4365234 RMD160 7045401ac70a7aa865a8040da4aca2683204abd6 SHA1 d85f05b7bcef1adf8306a789f3ac0325c3c67e8d SHA256 ce77edae680d090cb8275eca9be282bdbc5fbef028d7bf6f772fb4f04b578d7a
+DIST e2fsprogs-1.41.4.tar.gz 4389512 RMD160 da1f77f0a41a0047b86bf540bfb484622efd79fd SHA1 55da145bce7b024ab609aa4a6fc8be81a2bb3490 SHA256 2cc10fee2b29add737e454eb634513135b34a638f7ca2b18364864fe089020dc
 EBUILD e2fsprogs-1.40.11.ebuild 4193 RMD160 f7fe29b021364c0851b5e8612a2d39edc8755c28 SHA1 8b1ac4529ab4d8f0902d7a40777906f17f503316 SHA256 9504ec0aef8bdb5d0ed0700495c633fc585e1a6e1f0958ba193f304c485f3424
 EBUILD e2fsprogs-1.40.9.ebuild 4090 RMD160 1d772fd802623575d833ad29c9a9cc07c6ea2a1c SHA1 894b940389d0717fc1b71d107bac046b5a1cd14a SHA256 0e0bc50ae354c6f6e36f393a4734645022cb76a90d4963b6f7938c360f0db96a
 EBUILD e2fsprogs-1.41.0.ebuild 3207 RMD160 ed59cdbabcb8f66eff0ffe428ce745db5ce2ab03 SHA1 538abff3d139020540ddfbc5df1452a73db9359e SHA256 fcebb3a8ad35888b6ccd1db970b3c4b43c591897888cd0a978e03a7d30e15b11
@@ -27,5 +28,6 @@ EBUILD e2fsprogs-1.41.1.ebuild 3207 RMD160 1dda0b39cc45d6a504e816ce0e17723a79f98
 EBUILD e2fsprogs-1.41.2.ebuild 3207 RMD160 b568fbcb3678cc727d30ed32625f155973eb7d70 SHA1 4b9efd6361f86d15b04b8abc00b24547bcca092f SHA256 ae288ce93615e1ba8c77a89a37922d98be5c5604004c6653592e3bd9678f1583
 EBUILD e2fsprogs-1.41.3-r1.ebuild 3656 RMD160 6cb1318287c2440d368869db5fe32d05c2d681d0 SHA1 fe042b23a26f8d16843324e81c4015e61d3f8e5a SHA256 f9ad76b676abfd2d1dc0c1dfb2c676684fa1133d6b11df030339488617d6fb11
 EBUILD e2fsprogs-1.41.3.ebuild 3601 RMD160 d56c465369a7ad07015a82be3079de69438cf961 SHA1 dff7d0afef696deff67e4adfffc0b105f40d8078 SHA256 481d84e456d6f41499bce89cd423cf0545ed80737e76f12d83f816f1c87184a2
-MISC ChangeLog 26277 RMD160 1071bdeb497f7cec809936e7e64fa845cadac4a5 SHA1 059b7610273c8c4b850737c16399af1d3bc2e4ed SHA256 e35cbbf0f3bb3d771ff9873f390cfcfdfebdef1f19af65344e35db3d325463d7
+EBUILD e2fsprogs-1.41.4.ebuild 3600 RMD160 7c607bac353c47c27f29d976160953ac62302565 SHA1 a705d2fd88beeb27635fddb9e1fbda3d8c5f4b9c SHA256 df051d51b2a8b6bb9899606e135dd76e4a3e416469a6bcc0c766d371dc1cc560
+MISC ChangeLog 26403 RMD160 7d1a360b60e6db3940d4ab0e13c7d1a866158df7 SHA1 667fa156a9d44f570e269cbdafc6f4b9054c6dd8 SHA256 a4ea5e415c3c164fa0e14b95064edbd7fc4b9bc99e0b5068dcdce9176e15c2d3
 MISC metadata.xml 164 RMD160 f43cbec30b7074319087c9acffdb9354b17b0db3 SHA1 9c213f5803676c56439df3716be07d6692588856 SHA256 f5f2891f2a4791cd31350bb2bb572131ad7235cd0eeb124c9912c187ac10ce92
