@@ -1,6 +1,11 @@
 # ChangeLog for sys-fs/e2fsprogs
 # Copyright 1999-2009 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/sys-fs/e2fsprogs/ChangeLog,v 1.175 2009/01/04 17:08:36 vapier Exp $
+# $Header: /var/cvsroot/gentoo-x86/sys-fs/e2fsprogs/ChangeLog,v 1.176 2009/01/28 05:47:45 vapier Exp $
+
+*e2fsprogs-1.41.4 (28 Jan 2009)
+
+  28 Jan 2009; Mike Frysinger <vapier@gentoo.org> +e2fsprogs-1.41.4.ebuild:
+  Version bump.
 
 *e2fsprogs-1.41.3-r1 (04 Jan 2009)
 
